<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fragmentBackground"
    tools:context=".ui.favorites.FavoritesFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favoritesList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:indeterminateProgressStyle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        tools:visibility="visible" />

</FrameLayout>