<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pageGraph"
    app:startDestination="@id/pageFragment">

    <fragment
        android:id="@+id/pageFragment"
        android:name="com.maximapps.page.ui.page.PageFragment"
        android:label=""
        tools:layout="@layout/fragment_page" >
        <argument
            android:name="sharedLesson"
            app:argType="com.maximapps.core.data.models.SharedLesson"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>

</navigation>