<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/addToFavorites"
        android:title="@string/add_to_favorites"
        android:icon="@drawable/ic_favorite_border"
        app:showAsAction="always"/>
    <item
        android:id="@+id/removeFromFavorites"
        android:title="@string/remove_from_favorites" />
</menu>