...
    app:layoutDescription="@xml/collapsible_toolbar_scene"
    android:fitsSystemWindows="false"
    android:minHeight="?attr/actionBarSize"
    app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

    <ImageView
        android:id="@+id/headerImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
